fix: Another try to fix fusioncatcher - back to conda

--- a/fusioncatcher/Dockerfile
+++ b/fusioncatcher/Dockerfile
@@ -1,25 +1,84 @@
-FROM python:2.7.18-slim-buster
+# The build-stage image:
+FROM continuumio/miniconda3:4.10.3 AS build
+
+# Install conda-pack:
+RUN conda install -c conda-forge conda-pack && \
+    conda create --name hydra -c bioconda -c conda-forge \
+    fusioncatcher=1.33
+
+# Use conda-pack to create a standalone enviornment
+# in /venv:
+RUN conda-pack -n hydra -o /tmp/env.tar
+WORKDIR /venv
+RUN tar xf /tmp/env.tar
+
+# We've put venv in same path it'll be in final image,
+# so now fix up paths:
+RUN /venv/bin/conda-unpack
+
+# The runtime-stage image; we can use Debian as the
+# base image since the Conda env also includes Python
+# for us.
+FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
 LABEL maintainer="martin.rippin@scilifelab.uu.se"
 LABEL version=1.33
-LABEL fusioncatcher=1.33
+LABEL cnvkit=1.33
 
-WORKDIR /opt
 RUN apt-get update && \
-    apt-get install --no-install-recommends -y build-essential=12.6 \
-    ca-certificates=20200601~deb10u2 \
-    gawk=1:4.2.1+dfsg-1 \
-    libncurses5-dev=6.1+20181013-2+deb10u2 \
-    libtbb-dev=2018~U6-4 \
-    procps=2:3.3.15-2 \
-    python-biopython=1.73+dfsg-1 \
-    wget=1.20.1-1.1 \
-    unzip=6.0-23+deb10u2 \
-    zlib1g-dev=1:1.2.11.dfsg-1+deb10u1 && \
+    apt-get install --no-install-recommends -y procps=2:3.3.15-2 && \
     rm -rf /var/lib/apt/lists/* && \
-    pip install --no-cache-dir numpy==1.16.6 openpyxl==2.6.4 xlrd==2.0.1 && \
-    wget --progress=dot:giga --no-check-certificate http://sf.net/projects/fusioncatcher/files/bootstrap.py -O bootstrap.py && \
-    python bootstrap.py -t -y && \
-    ln -s /opt/fusioncatcher/bin/fusioncatcher.py /usr/local/bin/fusioncatcher && \
-    cp /opt/fusioncatcher/etc/configuration.cfg /usr/local/etc/configuration.cfg
+    ln -s /usr/local/lib/libssl.so.1.1 /usr/local/lib/libssl.so.1.0.0 && \
+    ln -s /usr/local/lib/libcrypto.so.1.1 /usr/local/lib/libcrypto.so.1.0.0
+
+# Copy /venv from the previous stage:
+# to /usr/local to make it possible
+# running the softwares without activating
+# any conda env
+COPY --from=build /venv /usr/local
+
+#FROM continuumio/miniconda3:4.10.3 AS build
+#
+################### METADATA ######################
+#LABEL maintainer="martin.rippin@scilifelab.uu.se"
+#LABEL version=1.33
+#LABEL fusioncatcher=1.33
+#
+#RUN conda update -n base -c defaults conda && \
+#    conda create -p /usr/local -c bioconda -c conda-forge -c defaults \
+#    bbmap=38.44 \
+#    biopython >=1.50 \
+#    blat=35 \
+#    bowtie=1.2.3 \
+#    bowtie2=2.3.5 \
+#    bwa=0.7.12 \
+#    coreutils \
+#    fastqtk \
+#    fusioncatcher-seqtk=1.2 \
+#    grep \
+#    lzo \
+#    lzop \
+#    numpy=1.13.1 \
+#    oases \
+#    openjdk \
+#    openpyxl=2.5.0a2 \
+#    parallel=20171222 \
+#    picard=2.10.6 \
+#    pigz=2.3 \
+#    python=2.7 \
+#    samtools=0.1.19 \
+#    sra-tools=2.9.6 \
+#    star=2.7.2b \
+#    ucsc-faToTwoBit \
+#    velvet=1.2.10 \
+#    xlrd=1.0.0 \
+#    zip && \
+#    apt-get update && \
+#    apt-get install --no-install-recommends -y build-essential=12.6 && \
+#    rm -rf /var/lib/apt/lists/*
+#
+#WORKDIR /opt
+#RUN wget --progress=dot:giga https://github.com/ndaniel/fusioncatcher/archive/1.33.tar.gz && \
+#    tar -zxf 1.33.tar.gz
+#WORKDIR /opt/fusioncatcher-1.33
