chore: correct label for fusioncatcher

--- a/fusioncatcher/Dockerfile
+++ b/fusioncatcher/Dockerfile
@@ -24,7 +24,7 @@ FROM debian:buster-slim AS runtime
 ################## METADATA ######################
 LABEL maintainer="martin.rippin@scilifelab.uu.se"
 LABEL version=1.33
-LABEL cnvkit=1.33
+LABEL fusioncatcher=1.33
 
 RUN apt-get update && \
     apt-get install --no-install-recommends -y procps=2:3.3.15-2 && \
