fix: Add more logs to github build action

--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -39,6 +39,8 @@ jobs:
             IMAGE_VERSION=$(grep "LABEL version" $dockerFilePath | awk 'BEGIN{FS="\="}{print($2)}')
             echo "IMAGE_NAME=$IMAGE_NAME"
             echo "IMAGE_VERSION=$IMAGE_VERSION"
+            echo "$tmpName"
+            echo "$IMAGE_ID"
             docker tag $tmpName $IMAGE_ID:$IMAGE_VERSION
             docker push $IMAGE_ID:$IMAGE_VERSION
           done;
