feat(manta): use curl instead of wget

--- a/manta/Dockerfile
+++ b/manta/Dockerfile
@@ -8,9 +8,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y bzip2=1.0.6-9.2
                                                                  make=4.2.1-1.2 \
                                                                  python=2.7.16-1 \
                                                                  zlib1g-dev=1:1.2.11.dfsg-1+deb10u1 \
-                                                                 wget=1.20.1-1.1 && \
+                                                                 curl=7.64.0-4+deb10u3 && \
     rm -rf /var/lib/apt/lists/* && \
-    wget --progress=dot:giga https://github.com/Illumina/manta/releases/download/v${MANTA_VERSION}/manta-${MANTA_VERSION}.release_src.tar.bz2 && \
+    curl -L https://github.com/Illumina/manta/releases/download/v${MANTA_VERSION}/manta-${MANTA_VERSION}.release_src.tar.bz2  -o manta-${MANTA_VERSION}.release_src.tar.bz2 && \
     tar -xjf manta-${MANTA_VERSION}.release_src.tar.bz2 && \
     mkdir build
 
