--- a/manta/Dockerfile
+++ b/manta/Dockerfile
@@ -4,7 +4,7 @@ ENV MANTA_VERSION="1.6.0"
 
 ################## METADATA ######################
 LABEL maintainer="patrik.smeds@scilifelab.uu.se"
-LABEL version="${MANTA_VERSION}"
+LABEL version="1.6.0"
 
 RUN apt-get update && apt-get install --no-install-recommends -y bzip2=1.0.6-9.2~deb10u1 \
                                                                  gcc=4:8.3.0-1 \
