--- a/fusioncatcher/Dockerfile
+++ b/fusioncatcher/Dockerfile
@@ -42,7 +42,7 @@ FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
 LABEL maintainer="martin.rippin@scilifelab.uu.se"
-LABEL version=1.33v2
+LABEL version=1.33
 LABEL fusioncatcher=1.33
 
 RUN apt-get update && \
