--- a/common/Dockerfile
+++ b/common/Dockerfile
@@ -6,6 +6,7 @@ RUN conda install -c conda-forge conda-pack && \
     conda create --name hydra -c bioconda  -c conda-forge \
 	  bcftools=1.15 \
 	  bedtools=2.30 \
+	  cyvcf2=0.30.15 \
 	  datrie=0.8.2 \
 	  pysam=0.18.0 \
 	  python=3.9 \
@@ -32,7 +33,7 @@ FROM debian:buster-slim AS runtime
 
 ################## METADATA ######################
 LABEL maintainer="patrik.smeds@scilifelab.uu.se"
-LABEL version=0.1.8
+LABEL version=0.1.9
 LABEL bcftools=1.15
 LABEL bedtools=2.30
 LABEL datrie=0.8.2
