--- a/purecn/Dockerfile
+++ b/purecn/Dockerfile
@@ -2,6 +2,6 @@ FROM markusriester/purecn:2.2.0
 
 ################## METADATA ######################
 LABEL maintainer="erik.demitz-helin@gu.se"
-LABEL version="2.2.0"
+LABEL version=2.2.0
 
 CMD ["/bin/bash"]
